--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
     <script src="./main.js" type="module"></script>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
 </head>
 <body>
     <header>
         <div class="banner">
             <div class="slider" style="--quantity: 10">
-                <div class="item" style="--position: 1"><img src="/media/anime-1.jpg" alt=""></div>
-                <div class="item" style="--position: 2"><img src="/media/anime2.jpg" alt=""></div>
-                <div class="item" style="--position: 3"><img src="/media/anime3.jpg" alt=""></div>
-                <div class="item" style="--position: 4"><img src="/media/anime4.jpg" alt=""></div>
-                <div class="item" style="--position: 5"><img src="/media/anime5.jpg" alt=""></div>
-                <div class="item" style="--position: 6"><img src="/media/anime6.jpg" alt=""></div>
-                <div class="item" style="--position: 7"><img src="/media/anime7.jpg" alt=""></div>
-                <div class="item" style="--position: 8"><img src="/media/anime8.jpg" alt=""></div>
-                <div class="item" style="--position: 9"><img src="/media/anime9.jpg" alt=""></div>
-                <div class="item" style="--position: 10"><img src="/media/anime10.jpg" alt=""></div>
+                <div class="item" style="--position: 1"><img src="media/anime-1.jpg" alt=""></div>
+                <div class="item" style="--position: 2"><img src="media/anime2.jpg" alt=""></div>
+                <div class="item" style="--position: 3"><img src="media/anime3.jpg" alt=""></div>
+                <div class="item" style="--position: 4"><img src="media/anime4.jpg" alt=""></div>
+                <div class="item" style="--position: 5"><img src="media/anime5.jpg" alt=""></div>
+                <div class="item" style="--position: 6"><img src="media/anime6.jpg" alt=""></div>
+                <div class="item" style="--position: 7"><img src="media/anime7.jpg" alt=""></div>
+                <div class="item" style="--position: 8"><img src="media/anime8.jpg" alt=""></div>
+                <div class="item" style="--position: 9"><img src="media/anime9.jpg" alt=""></div>
+                <div class="item" style="--position: 10"><img src="media/anime10.jpg" alt=""></div>
             </div>
             <div class="content">
                 <h1 data-content="CODING">
@@ -39,15 +42,75 @@
     </header>
     <main>
         <div class="about-me">
-                <img src="">
+            <div class="text-container">
+                <h1>ABOUT ME</h1>
                 <p>
                     Hi! I'm Greta Peslekaitė, a front-end developer who creates not just beautiful but also highly functional websites.<br><br>
 
-                    I’m passionate about clean design and smooth user experiences—I believe a great website should not only look stunning but also work flawlessly. I specialize in HTML, CSS, JavaScript, TypeScript, React, and Git/GitHub, and every project is an opportunity for me to learn and improve.<br><br>
+                    I’m passionate about clean design and smooth user experiences—I believe a great website should not only look stunning but also work flawlessly. I specialize in <b>HTML, CSS, JavaScript, TypeScript, React, and Git/GitHub</b>, and every project is an opportunity for me to learn and improve.<br><br>
 
                     My goal is to build modern, fast, and user-friendly websites that stand out both visually and technically. Whether it's interactive pages, animations, or data-driven applications—I love creating and finding the best solutions.
                 </p>
+            </div>
+             <div class="img-container">
+                <img src="media/6509613.png">
+            </div>
+        </div>
+        <div class="projects-text">
+            <h1>MY PROJECTS</h1>
+            <p>
+                You can see my projects so far down bellow:
+            </p>
+        </div>
+        <div class="card">
+            <div class="card-content">
+                <h3>Kortelės antraštė</h3>
+                <p>Trumpas aprašymas apie turinį</p>
+                <button>Daugiau</button>
+            </div>
+        </div><br>
+        <div class="card">
+            <div class="card-content">
+                <h3>Kortelės antraštė</h3>
+                <p>Trumpas aprašymas apie turinį</p>
+                <button>Daugiau</button>
+            </div>
+        </div>
+        <div class="form-text">
+            <h1>Send me a message!</h1>
+            <p>
+                Got a question or proposal, or just want to say hello. Go ahead.
+            </p>
+            <form class="form-container">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required placeholder="Enter your name">
+            
+                <label for="email">Email Address:</label>
+                <input type="email" id="email" name="email" required placeholder="Enter your email address">
+
+                <label for="text">Additional details:</label>
+                <textarea type="text" placeholder="Hi, I think we need a design system for our products at Company X...
+                "></textarea>
+            
+                <button class="project-button">Send</button>
+            </form>
         </div>
     </main>
+    <footer>
+        <div>
+            <h3>Contact Information</h3>
+            <p>
+                gretapeslekaite@gmail.com<br>
+                +37067563620
+            </p>
+        </div>
+        <div class="social-icons">
+            <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+            <a href="#" target="_blank"><i class="bi bi-github"></i></a>
+        </div> 
+        <p>&copy; 2025 Greta Peslekaitė. All rights reserved.</p>
+    </footer>
 </body>
 </html>
